<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Username and Connect -->
    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <EditText
            android:id="@+id/username_input"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="Username"
            android:background="#fff" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/username_input"
            android:layout_toRightOf="@+id/username_input"
            android:background="?attr/colorPrimary"
            android:padding="10dp"
            android:text="Connect"
            android:textColor="#fff" />

    </RelativeLayout>





    <!-- Chat Messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/username"
        android:layout_above="@+id/sendMessage"
        android:padding="10dp" />

    <!-- Message Input Area -->
    <RelativeLayout

        android:id="@+id/sendMessage"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="Type a message"
            android:background="#fff"

            android:layout_toLeftOf="@+id/send_button"
            android:layout_toStartOf="@+id/send_button" />



        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"

            android:layout_height="50dp"

            android:text="Send"
            android:background="?attr/colorPrimary"
            android:textColor="#fff"
            android:padding="10dp"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>